ajustes de imagens, arquivos js, add offcanvas e sticky menu

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,7 +1,6 @@
 {
-    "/css/style.css": "/css/style.css?id=1648f5fd7200de84645c",
+    "/css/style.css": "/css/style.css?id=fbda3b79351a1c4bdc06",
     "/js/app.js": "/js/app.js?id=68b329da9893e34099c7",
     "/css/uikit.min.css": "/css/uikit.min.css?id=7f6169cfe14417aa317b",
-    "/js/uikit.min.js": "/js/uikit.min.js?id=1f8f80ff899e99c780bb",
-    "/js/uikit-icons.min.js": "/js/uikit-icons.min.js?id=863fb2d14f2a4d102d71"
+    "/js/uikit.min.js": "/js/uikit.min.js?id=c6be6218723c4d72d776"
 }
