--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,7 @@
 {
-    "/css/style.css": "/css/style.css?id=810f53210bc6271b5876",
+    "/css/style.css": "/css/style.css?id=52a462e2da82a7bba164",
     "/js/app.js": "/js/app.js?id=68b329da9893e34099c7",
+    "/videos/video-header.mp4": "/videos/video-header.mp4?id=2c53499dd219a3a51280",
     "/css/uikit.min.css": "/css/uikit.min.css?id=7f6169cfe14417aa317b",
     "/js/uikit.min.js": "/js/uikit.min.js?id=c6be6218723c4d72d776"
 }
